@@ -290,8 +290,42 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 				);
 			}
 		}
-		
+
 		return $settings;
+	}
+
+	/**
+	 * Returns an array of statuses and their properties.
+	 *
+	 * @return array
+	 */
+	public function get_status_config() {
+		return array(
+			array(
+				'status'                    => 'complete',
+				'status_label'              => __( 'Success', 'gravityflow' ),
+				'destination_setting_label' => esc_html__( 'Next Step if Success', 'gravityflow' ),
+				'default_destination'       => 'next',
+			),
+			array(
+				'status'                    => 'error_client',
+				'status_label'              => __( 'Error - Client', 'gravityflow' ),
+				'destination_setting_label' => esc_html__( 'Next Step if Client Error', 'gravityflow' ),
+				'default_destination'       => 'complete',
+			),
+			array(
+				'status'                    => 'error_server',
+				'status_label'              => __( 'Error - Server', 'gravityflow' ),
+				'destination_setting_label' => esc_html__( 'Next Step if Server Error', 'gravityflow' ),
+				'default_destination'       => 'complete',
+			),
+			array(
+				'status'                    => 'error',
+				'status_label'              => __( 'Error - Other', 'gravityflow' ),
+				'destination_setting_label' => esc_html__( 'Next step if Other Error', 'gravityflow' ),
+				'default_destination'       => 'complete',
+			),
+		);
 	}
 
 	/**
@@ -482,8 +516,15 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 	 */
 	function process() {
 
-		$this->send_webhook();
+		$step_status = $this->send_webhook();
 
+		//Ensure webhook steps defined / last updated prior to v2.0.2 (w/o 4xx, 5xx, other response code config) continue to process
+		$destination_status_key = 'destination_' . $step_status;
+		if ( ! isset( $this->{$destination_status_key} ) ) {
+			$step_status = 'complete';
+		}
+
+		$this->update_step_status( $step_status );
 		return true;
 	}
 
@@ -508,7 +549,6 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 
 		$body = null;
 
-
 		// Get request headers.
 		$headers = gravity_flow()->get_generic_map_fields( $this->get_feed_meta(), 'requestHeaders', $this->get_form(), $entry );
 
@@ -519,7 +559,7 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 			$auth_string = sprintf( '%s:%s', $this->basic_username, $this->basic_password );
 			$headers['Authorization'] = sprintf( 'Basic %s', base64_encode( $auth_string ) );
 		}
-		$this->log_debug( __METHOD__ . '() - log body setting ' . $this->body . ' :: ' . $this->raw_body);
+		$this->log_debug( __METHOD__ . '() - log body setting ' . $this->body . ' :: ' . $this->raw_body );
 		if ( $this->body == 'raw' ) {
 			$body = $this->raw_body;
 			$body = GFCommon::replace_variables( $body, $this->get_form(), $entry, false, false, false, 'text' );
@@ -582,15 +622,94 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 
 		if ( is_wp_error( $response ) ) {
 			$step_status = 'error';
+			$http_response_message = ' (WP Error)';
 		} else {
-			$step_status = 'success';
+			if ( isset( $response['response']['code'] ) ) {
+				$http_response_code = intval( $response['response']['code'] );
+				switch ( true ) {
+					case in_array( $http_response_code, range( 200,299 ) ):
+						$http_response_message = $response['response']['code'] . ' ' . $response['response']['message'] . ' (Success)';
+						$step_status = 'complete';
+						break;
+					case in_array( $http_response_code, range( 400,499 ) ):
+						$step_status = 'error_client';
+						$http_response_message = $response['response']['code'] . ' ' . $response['response']['message'] . ' (Client Error)';
+						break;
+					case in_array( $http_response_code, range( 500,599 ) ):
+						$step_status = 'error_server';
+						$http_response_message = $response['response']['code'] . ' ' . $response['response']['message'] . ' (Server Error)';
+						break;
+					default:
+						$step_status = 'error';
+						$http_response_message = $response['response']['code'] . ' ' . $response['response']['message'] . ' (Error)';
+				}
+			} else {
+				$step_status = 'error';
+				$http_response_message = ' (Error)';
+			}
 		}
 
-		$this->add_note( sprintf( esc_html__( 'Webhook sent. URL: %s', 'gravityflow' ), $url ) );
+		/**
+		 * Allow the step status to be modified on the webhook step.
+		 *
+		 * @param string              $step_status The step status derived from webhook response
+		 * @param array               $response    The response returned from webhook.
+		 * @param array               $args        The arguments used for executing the webhook request
+		 * @param array               $entry       The current entry.
+		 * @param Gravity_Flow_Step   $this        The current step.
+		 *
+		 * @return string
+		 */
+		$step_status = apply_filters( 'gravityflow_step_status_webhook', $step_status, $response, $args, $entry, $this );
+
+		/**
+		 * Allow the message logged to the timeline following webhook step to be modified
+		 *
+		 * @param string              $http_response_message The status message derived from webhook response
+		 * @param string              $step_status           The step status derived from webhook response
+		 * @param array               $response              The response returned from webhook.
+		 * @param array               $args                  The arguments used for executing the webhook request
+		 * @param array               $entry                 The current entry.
+		 * @param Gravity_Flow_Step   $this                  The current step.
+		 *
+		 * @return string
+		 */
+		$custom_response_message = apply_filters( 'gravityflow_response_message_webhook', $http_response_message, $step_status, $response, $args, $entry, $this );
+
+		if ( $custom_response_message == $http_response_message ) {
+			/* Translators: 1st placeholders is URL provided by user in step settings, 2nd placeholder is response codes from webhook execution */
+			$this->add_note( sprintf( esc_html__( 'Webhook sent.  URL: %1$s.  RESPONSE: %2$s', 'gravityflow' ), $url, $http_response_message ) );
+			$this->log_debug( __METHOD__ . '() - result: ' . $http_response_message );
+		} else {
+			$this->add_note( esc_html( $custom_response_message ) );
+			$this->log_debug( __METHOD__ . '() - result: ' . $custom_response_message );
+		}
 
 		do_action( 'gravityflow_post_webhook', $response, $args, $entry, $this );
 
 		return $step_status;
+	}
+
+	/**
+	 * Determines the current status of the step.
+	 *
+	 * @return string
+	 */
+	public function status_evaluation() {
+		$step_status = $this->get_status();
+
+		return $step_status;
+	}
+
+	/**
+	 * Determines if the current step has been completed.
+	 *
+	 * @return bool
+	 */
+	public function is_complete() {
+		$status = $this->evaluate_status();
+
+		return ! in_array( $status, array( 'pending', 'queued' ) );
 	}
 
 	/**
@@ -629,11 +748,15 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 			$type = is_array( $field_type ) ? $field_type[0] : $field_type;
 			$type = ucfirst( GF_Fields::get( $type )->get_form_editor_field_title() );
 
+			/* Translators: Placeholder is for the field type which should be selected */
 			$first_choice_label = sprintf( __( 'Select a %s Field', 'gravityflow' ), $type );
 
 		}
 
-		$fields[] = array( 'value' => '', 'label' => $first_choice_label );
+		$fields[] = array(
+			'value' => '',
+			'label' => $first_choice_label,
+		);
 
 		// If field types not restricted add the default fields and entry meta.
 		if ( is_null( $field_type ) ) {
@@ -645,7 +768,10 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 
 			$entry_meta = GFFormsModel::get_entry_meta( $form['id'] );
 			foreach ( $entry_meta as $meta_key => $meta ) {
-				$fields[] = array( 'value' => $meta_key, 'label' => rgars( $entry_meta, "{$meta_key}/label" ) );
+				$fields[] = array(
+					'value' => $meta_key,
+					'label' => rgars( $entry_meta, "{$meta_key}/label" ),
+				);
 			}
 		}
 
@@ -716,7 +842,10 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 						$col_index ++;
 					}
 				} elseif ( ! rgar( $field, 'displayOnly' ) && $field_is_valid_type && ! $exclude_field ) {
-					$fields[] = array( 'value' => $field->id, 'label' => GFCommon::get_label( $field ) );
+					$fields[] = array(
+						'value' => $field->id,
+						'label' => GFCommon::get_label( $field ),
+					);
 				}
 			}
 		}
@@ -866,7 +995,7 @@ class Gravity_Flow_Step_Webhook extends Gravity_Flow_Step {
 
 		return $selected_choice;
 	}
-	
+
 }
 
 Gravity_Flow_Steps::register( new Gravity_Flow_Step_Webhook() );
