@@ -13,3 +13,8 @@
 - Added Step ID to workflow settings list (row actions mouseover) and to sub-title of edit step screen
 - Added filter gravityflow_inbox_paging to inbox page to enable control of pagination options
 - API: Updated the way assignees are handled to allow the base assignee class to be extended so new types of assignees can be created.
+- Modified Outgoing Webhook step:
+   => Previously only step status was complete, it now will handle response codes appropriate statuses: 2xx (complete), 4xx (error_client), 5xx (error_server), other (error)
+	 => Creation of 2 new filters: gravityflow_step_status_webhook and gravityflow_response_message_webhook that enable custom logic and note at conclusion of step
+	 => Suggested documentation updates to co-incide with release: 2 new filters, blog post on extending statuses as part of step framework
+	 => Release note example(s): Conditional logic / retry on webhook failure or success branch with notification on server configuration issues
